deploy-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  namespace: dev
  labels:
    app: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: docker.nexus.local.com/nodejs-app:18
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
