deploy-app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: dev
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
